# server/src/main/java/com/navesdev/recurve/subscriber/controller/SubscriberResponse.java
@@ -17,6 +17,7 @@ public record SubscriberResponse(
         UUID id,
         String name,
         String email,
+        String document,
         SubscriberStatus status,
         UUID planId,
         UUID planPriceId,
@@ -34,6 +35,7 @@ public record SubscriberResponse(
                 summary.id(),
                 summary.name(),
                 summary.email(),
+                summary.taxDocument(),
                 summary.status(),
                 summary.planId(),
                 summary.planPriceId(),
